# troy

./: Cargo.toml  README.md
dns/: Cargo.toml
socks5/: Cargo.toml
socks5/src/: error.rs  lib.rs
socks5/src/protocol/: handshake.rs  mod.rs  password.rs
trojan/: Cargo.toml
trojan/src/: config.rs  error.rs  lib.rs  tls.rs
trojan/src/trojan/: tcp.rs  udp.rs
troy/: Cargo.toml
troy/src/: config.rs  error.rs  lib.rs  protocol.rs
troy/src/tls/: mod.rs
troy/src/trojan/: mod.rs  utils.rs
tun/: Cargo.toml
tun/src/: config.rs  lib.rs  tun_device.rs  udp.rs
