[package]
name = "troy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["net", "io-util"] }
tokio-native-tls = "0.3.0"
