[package]
name = "troy-tun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
bytes = "1.3.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
smoltcp = { version = "0.8.2", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-icmp", "socket-udp", "socket-tcp"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["sync"] }
tun = { version = "0.5.4", features = ["async"] }
